--- a/film/black-adam-2022/index.css
+++ b/film/black-adam-2022/index.css
@@ -2,6 +2,18 @@ body{
 	background-color: #343434;
 }
 
+h1{
+	text-align: center;
+}
+
+h3{
+	text-align: center;
+}
+
+.iframe{
+	text-align: center;
+}
+
 .reglement{
 	text-align: center;
 	color: white;
