--- a/template/serie/index.html
+++ b/template/serie/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<link href="gigastream/ICON.PNG" rel="icon">
-	<title>Teen-Wolf | GigaStream</title>
+	<title>NOM | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -19,7 +19,7 @@
 
 	<br>
 	
-	<h1>Teen Wolf HD VF</h1>
+	<h1>NOM QUALIÉ VERSION</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
 	
 	<br>
@@ -39,23 +39,6 @@
 		<a href="saison-1/episode-10/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
 		<a href="saison-1/episode-11/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
 		<a href="saison-1/episode-12/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-	</p>
-
-	<HR ALIGN=CENTER WIDTH="90%" SIZE="4" NOSHADE COLOR="WHITE">
-	<h2 style="color: red;">Saison 2</h2>
-	<p>
-		<a href="saison-2/episode-1/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-2/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-3/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-4/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-5/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-6/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-7/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-8/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-9/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-10/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-11/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
-		<a href="saison-2/episode-12/"><img class="affiche" src="Teen-Wolf.png" height="200"></a>
 	</p>
 
 	<br>
