--- a/index.css
+++ b/index.css
@@ -27,6 +27,40 @@ footer{
 	cursor: help;
 }
 
+.aleatoire{
+    -webkit-animation: color-change 1s infinite;
+    -moz-animation: color-change 1s infinite;
+    -o-animation: color-change 1s infinite;
+    -ms-animation: color-change 1s infinite;
+    animation: color-change 1s infinite;
+}
+
+@-webkit-keyframes color-change {
+    0% { color: white; }
+    50% { color: purple; }
+    100% { color: purple; }
+}
+@-moz-keyframes color-change {
+    0% { color: white; }
+    50% { color: purple; }
+    100% { color: purple; }
+}
+@-ms-keyframes color-change {
+    0% { color: white; }
+    50% { color: purple; }
+    100% { color: purple; }
+}
+@-o-keyframes color-change {
+    0% { color: white; }
+    50% { color: purple; }
+    100% { color: purple; }
+}
+@keyframes color-change {
+    0% { color: white; }
+    50% { color: purple; }
+    100% { color: purple; }
+}
+
 .introuvable{
 	text-align: center;
 	color: white;
