--- a/index.css
+++ b/index.css
@@ -38,27 +38,27 @@ footer{
 @-webkit-keyframes color-change {
     0% { color: white; }
     50% { color: purple; }
-    100% { color: purple; }
+    100% { color: white; }
 }
 @-moz-keyframes color-change {
     0% { color: white; }
     50% { color: purple; }
-    100% { color: purple; }
+    100% { color: white; }
 }
 @-ms-keyframes color-change {
     0% { color: white; }
     50% { color: purple; }
-    100% { color: purple; }
+    100% { color: white; }
 }
 @-o-keyframes color-change {
     0% { color: white; }
     50% { color: purple; }
-    100% { color: purple; }
+    100% { color: white; }
 }
 @keyframes color-change {
     0% { color: white; }
     50% { color: purple; }
-    100% { color: purple; }
+    100% { color: white; }
 }
 
 .introuvable{
