--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@ body{
 }
 
 .affiche{
+    max-width: 100%;
+    max-height: 140px;
 	-webkit-transition: all 0.3s ease;
 	-moz-transition: all 0.3s ease;
 	-ms-transition: all 0.3s ease;
