--- a/serie/mercredi-2022/index.css
+++ b/serie/mercredi-2022/index.css
@@ -6,27 +6,24 @@ h1{
 	text-align: center;
 }
 
-h2{
-	padding-left: 2%;
-}
-
 h3{
 	text-align: center;
 }
 
 h2{
+	padding-left: 2%;
 	color: #cccccc;
 }
 
-p{
-	text-align: center;
-}
-
-.affiche{
+figure {
+    display: inline-flex;
+    flex-flow: column;
+    max-width: 220px;
+    margin: auto;
 	padding-left: 10px;
-	padding-right: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	padding-right: 10px;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	-ms-transition: all 0.5s ease;
@@ -34,12 +31,32 @@ p{
 	transition: all 0.5s ease;
 }
 
-.affiche:hover{
+figure:hover {
 	-webkit-transform:scale(1.1);
 	-moz-transform:scale(1.1);
 	-ms-transform:scale(1.1);
 	-o-transform:scale(1.1);
 	transform:scale(1.1);
+}
+
+a{
+	text-decoration: none;
+}
+
+p{
+	text-align: center;
+}
+
+.affiche{
+    max-width: 220px;
+    max-height: 150px;
+}
+
+figcaption {
+    background-color: #141414;
+    color: white;
+    padding: 3px;
+    text-align: center;
 }
 
 .reglement{
